version/0.71/_sources/autoapi/pyedb/dotnet/database/cell/hierarchy/pin_pair_model/PinPair.rst.txt






:class:`PinPair`
================


.. py:class:: pyedb.dotnet.database.cell.hierarchy.pin_pair_model.PinPair(component, edb_pin_pair)

   Bases: :py:obj:`object`



.. py:currentmodule:: PinPair

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~add_pin_pair`
            - Add a pin pair definition.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~first_pin`
            - 
          * - :py:attr:`~second_pin`
            - 
          * - :py:attr:`~is_parallel`
            - 
          * - :py:attr:`~rlc_enable`
            - 
          * - :py:attr:`~resistance`
            - 
          * - :py:attr:`~inductance`
            - 
          * - :py:attr:`~capacitance`
            - 
          * - :py:attr:`~rlc_values`
            - 







Import detail
-------------

.. code-block:: python

    from pyedb.dotnet.database.cell.hierarchy.pin_pair_model import PinPair

Property detail
---------------

.. py:property:: first_pin

.. py:property:: second_pin

.. py:property:: is_parallel

.. py:property:: rlc_enable

.. py:property:: resistance

.. py:property:: inductance

.. py:property:: capacitance

.. py:property:: rlc_values




Method detail
-------------

.. py:method:: add_pin_pair(r: float | None = None, l: float | None = None, c: float | None = None, r_enabled: bool | None = None, l_enabled: bool | None = None, c_enabled: bool | None = None, first_pin: str | None = None, second_pin: str | None = None, is_parallel: bool = False)

   
   Add a pin pair definition.


   :Parameters:

       **r: float | None**
           ..

       **l: float | None**
           ..

       **c: float | None**
           ..

       **r_enabled: bool**
           ..

       **l_enabled: bool**
           ..

       **c_enabled: bool**
           ..

       **first_pin: str**
           ..

       **second_pin: str**
           ..

       **is_parallel: bool**
           ..



   :Returns:

       
           ..











   ..
       !! processed by numpydoc !!




